2011-06-04  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSURL.h,
	* Source/NSURL.m: Add -checkResourceIsReachableAndReturnError:

2011-06-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSString.m: [(-getLineStart:end:contentsEnd:forRange:)]
	Fix off-by-one error in reported contents end for DOS style lines.

2011-06-02 Riccardo Mottola <rm@gnu.org>

	* Source/NSTimeZone.m: Disable use of tzname on OpenBSD too.

2011-06-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: Allow for quotes around zone name in
	/etc/sysconfig/time on redhat/centos.

2011-06-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: Disable use of tzname on FreeBSD as it's not
	fully implemented there.  Add a couple of new mechanisms for
	guessing the timezone on debina and redhat.

2011-06-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSString.h: Add explicit warnings about OSX
	compatible modifications to values returned by path methods.
	* Source/NSTimeZone.m: Don't guess at tzname[0] if the value of
	daylight shows it's not valid.

2011-05-31  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSCallBacks.h: Adjust callback prototypes to use
	NSUInteger.

2011-05-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GNUstep.h:
	Deprecate autorelease pool macros and make them always create the
	pool.

2011-05-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSHashTable.h:
	* Headers/Foundation/NSMapTable.h:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSXML.m:
	* Source/GSAvahiNetService.m:
	* Source/NSCallBacks.m:
	* Source/NSConcreteHashTable.m:
	* Source/NSConcreteMapTable.m:
	* Source/NSConnection.m:
	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m:
	* Source/NSTask.m:
	* Source/NSTimeZone.m:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/win32/GSRunLoopCtxt.m:
	Update to use new NSInteger... callback names rather than NSInt...
	for compatibility with OSX