@@ -78,6 +78,12 @@
   [[NSNotificationCenter defaultCenter] removeObserver: self];
   [super finalize];
 }
+#else
+- (void) dealloc
+{
+  [[NSNotificationCenter defaultCenter] removeObserver: self];
+  [super dealloc];
+}
 #endif
 
 - (id) init
@@ -219,8 +225,17 @@
 #ifdef __GS_WITH_GC__
 - (void) finalize
 {
-  [[NSNotificationCenter defaultCenter] removeObserver: self];
+  if (counter >= 0)
+    {
+      [[NSNotificationCenter defaultCenter] removeObserver: self];
+    }
   [super finalize];
+}
+#else
+- (void) dealloc
+{
+  [[NSNotificationCenter defaultCenter] removeObserver: self];
+  [super dealloc];
 }
 #endif
 
